Sat Jan 28 14:38:58 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Fix bug with upsd declaring driver stale when the system resumes
   after suspend-to-disk
 - Improve readability of the code by removing non-functional call to
   subroutine update_time and moving decision whether or not a ping
   must be sent to the driver to the routine calling it

Fri Jan 27 17:15:00 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Update to snmp.
 - Comment from Niklas
   Updates the following in snmp-ups:
   * Added more OID:s to apccmib (battery.current and more), tried to
      group the values better in the table to get overview.
   * Added support for the notion that negative values means that it's
      not supported (used by apccmib).
   * Added support to disable the "competition" for some variables, handy
      when there are multiple OID:s supplying the same value depending on
      how fancy your UPS SNMP support is (used by apccmib).

Fri Jan 27 15:01:20 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added usage paths for APC Back-UPS 500.

Thu Jan 26 16:22:00 UTC	2005 / Kjell Claesson <kjell.claesson@telia.com>

 - Commit patch for snmp and 3phase from Niklas Edmundsson
 - Comment from Niklas
    Attached is a patch that does the following:
    * Changes snmp-ups to use SNMP_MSG_GET instead of SNMP_MSG_GETNEXT.
    * Rips out the kludges caused by using getnext instead of get.
    * Fixes a couple of bugs and missing features in snmp-ups.
    * Updates the APC mib to work and report 3phase values.
    * Updates the other mibs to hopefully work, needs testing by people
      with hardware.

Tue Jan 24 20:40:34 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - safenet: improve robustness, add minimal hardware detection and
   improve the error handling
 - bestfcom, tripplite: fix the "array subscript out of range" bug
   (https://bugzilla.novell.com/show_bug.cgi?id=133610)

   (Arjen de Korte)
