@@ -53,20 +53,23 @@ static void parse_input_signals(const char *value, int *line, int *val)
 	*line = 0; 
 	*val = 0; 
  
-	if (strstr(value, "CTS")) 
+	if (strstr(value, "CTS")) {
 		*line |= TIOCM_CTS; 
-	if (!strstr(value, "-CTS")) 
-		*val |= TIOCM_CTS; 
- 
-	if (strstr(value, "DCD")) 
+		if (!strstr(value, "-CTS")) 
+			*val |= TIOCM_CTS; 
+ 	}
+
+	if (strstr(value, "DCD")) {
 		*line |= TIOCM_CD; 
-	if (!strstr(value, "-DCD")) 
-		*val |= TIOCM_CD; 
- 
-	if (strstr(value, "RNG")) 
+		if (!strstr(value, "-DCD")) 
+			*val |= TIOCM_CD; 
+ 	}
+
+	if (strstr(value, "RNG")) {
 		*line |= TIOCM_RNG; 
-	if (!strstr(value, "-RNG")) 
-		*val |= TIOCM_RNG; 
+		if (!strstr(value, "-RNG")) 
+			*val |= TIOCM_RNG; 
+	}
 }
 
 void upsdrv_initinfo(void)
@@ -186,7 +189,7 @@ static void set_ups_type(void)
 /* power down the attached load immediately */
 void upsdrv_shutdown(void)
 {
-	int	flags, ret;;
+	int	flags, ret;
 
 	if (upstype == -1)
 		fatalx("No upstype set - see help text / man page!");
@@ -264,3 +267,4 @@ void upsdrv_cleanup(void)
 {
 	ser_close(upsfd, device_path);
 }
+
